# LC_Dielectrics

./: .gitignore  311gui.txt  Agilent.py  Agilent_E4890A.py  Excel_Writer.py  Instruments.py  LCD.bat  LC_Dielectrics.py  LinkamHotstage.py  README.md  environment.yml  excel_writer.py  frames.py  main.py  pyproject.toml  requirements.txt  results.json  results_2.json  results_harry.json  results_multi.json  test.py
lcdielectrics/: Excel_Writer.py  Frames.py  Instruments.py  LC_Dielectrics.py  __main__.py  dpg_ui.py  excel_writer.py  frames.py  icon.qrc  icon_qrc.py  instruments.py  lc_dielectrics.py  lcd_dataclasses.py  lcd_excel_writer.py  lcd_instruments.py  lcd_main.py  lcd_ui.py  lcd_ui_qt.py  lcd_utils.py  lcd_utils_qt.py  main.py  ui.py
