[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcdielectrics"
version = "0.0.1"
authors = [
    {name =  "Dan Baker", email = "D.L.Baker@leeds.ac.uk"}
]
description = "GUI to perform dielectric measurements on LC cells."
readme = "README.md"
requires-python = "<=3.12, >=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "dearpygui",
    "numpy==2",
    "pyvisa",
    "xlsxwriter",
    "pyvisa-py",
    "pyusb",
    "pyserial",
    "psutil",
    "zeroconf",
    "pyside6==6.8.1",
    "pyside6-stubs>=6.4.2.0",
    "pyqtgraph>=0.13.7",
]

[project.urls]
"Homepage" = "https://github.com/SoftMatterPhysicsLeeds/LC_Dielectrics"
"Bug Tracker" = "https://github.com/SoftMatterPhysicsLeeds/LC_Dielectrics/issues"

[project.gui-scripts]
lcdielectrics = "lcdielectrics.lcd_main:main"
